# VisualFT

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
.claude/: settings.local.json
.claude/agents/: audit.md  scan-migrator.md
docs/: architecture.md  getting-started-teleop.md  getting-started.md  golden-principles.md  lessons-learned.md  quality-score.md  todos.md
docs/design-docs/: design.md  golden-principles.md  lessons-learned.md
docs/exec-plans/: plans.md  tech-debt-tracker.md
docs/exec-plans/active/: arm-commander-migration.md  target-architecture.md
interview_demos/: BRINGUP.md  MUJOCO_LOG.TXT  SPEC.md  cheatsheet.md  interview_prep.md
interview_demos/sim/: demo.py  hand_env.py  hand_retargeting.py  teleop_filters.py  train_bc.py
interview_demos/teleop/: flexiv_commander.py  retargeting.py  safety_config.py  sensor_bridge.py  teleop_main.py  vr_reader.py  vr_server.py
launch/: visionft.launch.py
ros2_ws/: convo.md
ros2_ws/.claude/: plan.md  settings.local.json
ros2_ws/src/arm_commander/: CMakeLists.txt  package.xml
ros2_ws/src/arm_commander/include/arm_commander/: arm_commander.hpp  config.hpp
ros2_ws/src/arm_commander/src/: arm_commander.cpp  config.cpp
ros2_ws/src/common/common/: config.py  errors.py  types.py
ros2_ws/src/common/config/: robot.yaml
ros2_ws/src/flexiv_driver/flexiv_driver/: arm_commander.py  safety.py
ros2_ws/src/floating_scan/: CMakeLists.txt  package.xml
ros2_ws/src/floating_scan/config/: robot.yaml  scan.yaml  teleop.yaml
ros2_ws/src/floating_scan/include/arm_commander/: arm_commander.hpp  config.hpp  teleop_config.hpp
ros2_ws/src/floating_scan/src/: arm_commander.cpp  floating_scan.cpp  scan_controller.cpp  teleop.cpp  teleop_config.cpp
ros2_ws/src/inference/: claude.txt  package.xml  setup.py
ros2_ws/src/inference/config/: spatial_image_only.yaml
ros2_ws/src/inference/inference/: attention.py  config.py  inference_node.py  models_v2.py
ros2_ws/src/robot_behaviors/: CMakeLists.txt
ros2_ws/src/robot_behaviors/config/: robot.yaml  teleop.yaml
ros2_ws/src/robot_behaviors/include/robot_behaviors/: scan_config.hpp
ros2_ws/src/robot_behaviors/scripts/: vr_server.py  zmq_raw_publisher.py
ros2_ws/src/robot_behaviors/src/: floating_scan.cpp  massage.cpp  scan_config.cpp  scan_controller.cpp  teleop.cpp  teleop_config.cpp
ros2_ws/src/tendon_classifier/: package.xml  setup.cfg  setup.py
ros2_ws/src/tendon_classifier/config/: spatial_combined.yaml
ros2_ws/src/tendon_classifier/tendon_classifier/: encoders.py  inference_node.py
ros2_ws/src/visionft/: BRIDGE_README.md  README.md  description.md  package.xml  setup.py
ros2_ws/src/visionft/config/: example_session.yaml
ros2_ws/src/visionft/launch/: record.launch.py  scan.launch.py  teleop.launch.py  visionft.launch.py
ros2_ws/src/visionft/visionft/: coinft.py  data_logger.py  flexiv.py  rdk_cartesian_bridge.py  rdk_utils.py  robot_publisher.py  scan_node.py  scene_stream.py  tactile_stream.py  test_cartesian_rotation.py  wrench_plotter.py
ros2_ws/src/visionft/visionft/sensors/: coinft.py  usb_camera.py  wait_for_coinft.py
ros2_ws/src/visionft/visionft/streams/: scene_stream.py
ros2_ws/src/visionft/visionft/viz/: grid_visualizer.py  led_dashboard.py  plot_csv.py  wrench_plotter.py
ros2_ws/src/visualft_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/visualft_camera/launch/: camera.launch.py
ros2_ws/src/visualft_camera/visualft_camera/: gstream_camera_udp_node.py
scripts/: check_docs_freshness.py  extract_mcap.py  lint_principles.py
tests/: __init__.py
tests/unit/: test_arm_commander.py  test_safety.py
visionft/: coinft.py  data_logger.py  robot_publisher.py  wrench_plotter.py
