<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>floating_scan</name>
  <version>0.0.0</version>
  <description>C++ RT joint floating for hand-guided scanning</description>
  <maintainer email="georgealex29@gmail.com">li2053</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
